Add code to extract function from Python using annotations and convert it to an MLIR representation in the Pandas dialect.

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -1,8 +1,14 @@
 cmake_minimum_required(VERSION 3.18)
-project(python_ast_importer)
+project(pandas_mlir_converter)
 
-pybind11_add_module(python_ast_importer
+pybind11_add_module(pandas_mlir_converter
   import_ast.cpp
+  generate_mlir.cpp
   bindings.cpp
 )
 
+target_link_libraries(pandas_mlir_converter PRIVATE
+  MLIRIR
+  MLIRStandard
+  PandasMLIRPandasDialect
+)
