--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -9,6 +9,6 @@ pybind11_add_module(pandas_mlir_converter
 
 target_link_libraries(pandas_mlir_converter PRIVATE
   MLIRIR
-  MLIRStandard
+  MLIRFunc
   PandasMLIRPandasDialect
 )
