Add conversion from Pandas to Tensor
This patch adds code to convert pandas types
to tensor types and the pandas slice op to
tensor.extract_slice.

--- a/tools/pandas-mlir-opt/CMakeLists.txt
+++ b/tools/pandas-mlir-opt/CMakeLists.txt
@@ -13,6 +13,7 @@ target_link_libraries(pandas-mlir-opt PRIVATE
   PandasMLIRInitAll
   PandasMLIRArrowDialect
   PandasMLIRPandasDialect
+  PandasMLIRConversionPasses
   ${dialect_libs}
   ${conversion_libs}
 )
