Better conversion of Python AST -> MLIR
This patch refactors the conversion process
and adds support for additional ops (like binary op)
and types (like string).

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -10,5 +10,6 @@ pybind11_add_module(pandas_mlir_converter
 target_link_libraries(pandas_mlir_converter PRIVATE
   MLIRIR
   MLIRFunc
+  MLIRTransforms
   PandasMLIRPandasDialect
 )
