--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,14 @@
+astunparse==1.6.3
+attrs==21.4.0
+iniconfig==1.1.1
 numpy==1.22.2
+packaging==21.3
 pandas==1.4.0
+pluggy==1.0.0
+py==1.11.0
+pyparsing==3.0.7
+pytest==7.1.1
 python-dateutil==2.8.2
 pytz==2021.3
 six==1.16.0
+tomli==2.0.1
